# car

./: .env  .gitignore  README.md  car_agent.py  config.py  config.yaml  func2schema.py  meta_tool_create.py  meta_tool_exec.py  prompts.py  pyproject.toml  schema.py  test_arc_mode.py  toolhop_pro_test_results_missing_id_7.txt
results/: comparison_react_vs_raagent.json  comparison_react_vs_raagent.txt  custom_output_xxxxxxxxxxxx.jsonl  gpt_car_com.txt  gpt_car_mis.txt  pae_gpt_com.jsonl  pae_gpt_err.jsonl  pae_gpt_mis.jsonl  q25_car_com.txt  qwen3_create_complete.txt  qwen3_create_missing.txt  qwen3_pae_complete.jsonl  qwen3_pae_error.jsonl  qwen3_pae_missing.jsonl  qwen3_raagent_complete.txt  qwen3_raagent_error.txt  qwen3_raagent_missing.txt  qwen3_react_complete.jsonl  qwen3_react_error.jsonl  qwen3_react_missing.jsonl  qwen3_replan_complete.txt  qwen3_replan_missing.txt  react_gpt_com.jsonl  react_gpt_err.jsonl  react_gpt_mis.jsonl  react_q25_com.jsonl  toolhop_pro_test_results_missing_id_13.txt  toolhop_pro_test_results_missing_id_2.txt  toolhop_pro_test_results_missing_id_6.txt  toolhop_pro_test_results_missing_id_716.txt
utils/: analyze_toolhoppro.py  statistics_toolhoppro.py
