[project]
name = "car"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "func-timeout==4.3.5",
    "json-repair==0.30.2",
    "langchain>=1.0.0",
    "langchain-community>=0.3.26",
    "langchain-core>=0.3.66",
    "langchain-openai>=0.3.27",
    "langgraph>=1.0.1",
    "matplotlib>=3.10.7",
    "pyyaml>=6.0.3",
    "tqdm==4.67.1",
]
